✨ feat: spark submit operator and docker compose revise

--- a/airflow/spark/EDA-spark.ipynb
+++ b/airflow/spark/EDA-spark.ipynb
@@ -22,22 +22,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "32f55de7-ccee-42fc-b99a-ab2b7cc69502",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import glob\n",
+    "from pyspark.sql import SparkSession\n",
     "import os\n",
-    "import json"
+    "import glob\n",
+    "import json\n",
+    "import boto3\n",
+    "from botocore.exceptions import NoCredentialsError\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "# AWS S3 정보\n",
+    "BUCKET_NAME = os.getenv('BUCKET_NAME')\n",
+    "ACCESS_KEY = os.getenv('AWS_ACCESS_KEY_ID')\n",
+    "SECRET_KEY = os.getenv('AWS_SECRET_ACCESS_KEY')\n",
+    "REGION_NAME = \"ap-northeast-2\"\n",
+    "\n",
+    "\n",
+    "def download_s3_file(remote_path, local_path):\n",
+    "    s3 = boto3.client('s3', aws_access_key_id=ACCESS_KEY, aws_secret_access_key=SECRET_KEY)\n",
+    "    try:\n",
+    "        s3.download_file(BUCKET_NAME, remote_path, local_path)\n",
+    "    except NoCredentialsError:\n",
+    "        raise Exception(\"AWS credentials not available\")\n",
+    "\n",
+    "# 로컬 디렉토리 생성\n",
+    "os.makedirs('data', exist_ok=True)\n",
+    "\n",
+    "# S3 파일 다운로드\n",
+    "download_s3_file('jobplanet/year=2023/month=08/day=14/jobplanet.json', 'data/jobplanet.json')\n",
+    "download_s3_file('jumpit/year=2023/month=08/day=12/jumpit.json', 'data/jumpit.json')\n",
+    "download_s3_file('rallit/year=2023/month=08/day=12/rallit.json', 'data/rallit.json')\n",
+    "download_s3_file('wanted/year=2023/month=08/day=12/wanted.json', 'data/wanted.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "9d2cf2c4-8349-49af-ab7f-d33cde8d3d1d",
    "metadata": {
     "tags": []
@@ -55,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "9ac6a3c9-1a17-44b8-b017-8f24f46a13a0",
    "metadata": {
     "tags": []
@@ -70,7 +98,7 @@
        " '/home/jovyan/data/wanted.json']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +115,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
+   "id": "91fb7eea-98cb-45c2-b093-59432fb631ec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# JSON 파일 읽어서 DataFrame 생성\n",
+    "data = []\n",
+    "for path in file_path:\n",
+    "    with open(path) as json_file:\n",
+    "        json_data = json.load(json_file)\n",
+    "        # 키 이름 변경\n",
+    "        if \"result\" in json_data:\n",
+    "            data.append(path)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5e8bfb5f-7e8a-4e60-b4c2-b01cdb86f76d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/jovyan/data/jobplanet.json',\n",
+       " '/home/jovyan/data/jumpit.json',\n",
+       " '/home/jovyan/data/rallit.json',\n",
+       " '/home/jovyan/data/wanted.json']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "87b0f8a4-2fc7-4e8c-8aaf-f5ac6537c9c6",
    "metadata": {
     "tags": []
@@ -95,12 +169,12 @@
    "outputs": [],
    "source": [
     "# 모든 JSON 파일을 한 번에 읽어 DataFrame 생성\n",
-    "df = spark.read.option(\"multiline\", \"true\").json(file_path)"
+    "df = spark.read.option(\"multiline\", \"true\").json(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "142ae52f-fd3d-4cc9-afcb-0158873f9238",
    "metadata": {
     "tags": []
@@ -111,7 +185,7 @@
      "output_type": "stream",
      "text": [
       "+----------------------------+\n",
-      "|                     results|\n",
+      "|                      result|\n",
       "+----------------------------+\n",
       "|[{, 웹 개발자, 포그리트, ...|\n",
       "| [{null, 서버/백엔드 개발...|\n",
@@ -128,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "39b4936d-d232-4482-8555-a297f6094057",
    "metadata": {
     "tags": []
@@ -136,7 +210,7 @@
    "outputs": [],
    "source": [
     "# \"results\" 배열을 DataFrame의 행으로 변환\n",
-    "df_results = df.selectExpr(\"explode(results) as results\")\n",
+    "df_results = df.selectExpr(\"explode(result) as results\")\n",
     "\n",
     "# 각 필드에 대해 DataFrame 컬럼으로 분리\n",
     "df_final = df_results.select(\n",
