fix: add push_down_predicate parameter in 1st preprocessing script and notebook

--- a/glue/1st_preprocessing/de1_1_1st_preprocessing_notebook.ipynb
+++ b/glue/1st_preprocessing/de1_1_1st_preprocessing_notebook.ipynb
@@ -109,7 +109,15 @@
 			"source": [
 				"# Function to create DynamicFrame from the catalog\n",
 				"def create_dyf_from_catalog(database_name, table_name):\n",
-				"    return glueContext.create_dynamic_frame.from_catalog(database=database_name, table_name=table_name)\n",
+				"    today = date.today()\n",
+				"    year = str(today.year)\n",
+				"    month = str(today.month).zfill(2)\n",
+				"    day = str(today.day).zfill(2)\n",
+				"    return glueContext.create_dynamic_frame.from_catalog(\n",
+				"        database=database_name,\n",
+				"        table_name=table_name,\n",
+				"        push_down_predicate=f'(year==\"{year}\" and month==\"{month}\" and day==\"{day}\")'\n",
+				"    )\n",
 				"\n",
 				"def unnest_and_rename(df):\n",
 				"    # Unnest the 'results' column\n",
@@ -289,7 +297,7 @@
 				"wanted_df = wanted_dyf.toDF()\n",
 				"\n",
 				"# Apply the refactored function\n",
-				"jobplanet_df = unnest_and_rename(jobplanet_df)"
+				"#jobplanet_df = unnest_and_rename(jobplanet_df)"
 			]
 		},
 		{
